# ai-news-ignite

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: news-collection.yml
news/2023-01/: googles-graphcast-improves-weather-forecasting.md
news/2023-06/: 2023-06-lmflow-finetuning-toolkit.md
news/2024-01/: deepmind-alphageometry-2-imo-2024.md
news/2024-03/: criticgpt-release.md
news/2024-08/: 2024-08-meta-code-llama.md
news/2025-01/: 2025-01-29-international-ai-safety-report.md
news/2025-02/: apple-mlx-machine-learning-framework.md  earth_species_project_ai_decode_animal_communications.md  meta-major-investment-ai-humanoid-robots.md
news/2025-03/: google-deepmind-gemini-robotics-2025-03.md  google-nvidia-ai-healthcare-collaboration.md
news/2025-04/: meta-llama4-release.md
news/2025-05/: 2025-05-22-anthropic-releases-claude-4-autonomous-functionality.md  2025-05-23-google-deepmind-veo-3.md  anthropic-claude-4.md  anthropic-claude4-release.md  deepmind-alphaevolve-gemini-coding-agent.md  deepseek-r1-0528-release.md  microsoft-build-2025-ai-summary.md
news/2025-06/: 2025-06-barbarians-flee-the-floodgates.md  OpenEuroLLM-Europe-Initiative-Open-Source-AI-Development.md  a-survey-on-deep-research-systems.md  o3-mini-release.md  (+18 more)
notebook/: graph.ipynb  langgraph_agent.ipynb  search.ipynb  tools.ipynb
prompts/: github_agent.j2  news_filter.j2  news_format.j2  search.j2  search_agent.j2  summarise_agent.j2  summarise_news.j2  supervisor_agent.j2  supervisor_agent_input.j2
(+17 files in other folders)
